fix alignment in login/register page.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,5 @@
 body{
-	background: #b7d6ed;
+	background: darkgray;
 }
 
 .thumbnail img{
